<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Eloviz</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_websearch">Web search</string>
    <string name="app_not_available">Sorry, there\'s no web browser available</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="validateConf">Validate</string>
    <string name="connection">Connection</string>
    <string name="register">Sign up</string>
    <string name="skip">Skip</string>
    <string name="email">Email</string>
    <string name="logo">Logo</string>
    <string name="private_room">Private</string>
    <string name="hide">Hide</string>
</resources>