<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayoutLogin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pinkEloviz"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/logo_eloviz"
        android:layout_width="200dp"
        android:layout_height="match_parent"
        android:layout_above="@+id/linear_layout_login_form"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/logo"
        android:src="@drawable/main_logo_white" />

    <LinearLayout
        android:id="@+id/linear_layout_login_form"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_centerVertical="true"
        android:orientation="vertical"
        android:typeface="serif">

        <EditText
            android:id="@+id/login_input"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:background="@drawable/round_edit_text_login_style"
            android:ems="10"
            android:hint="@string/login"
            android:inputType="textNoSuggestions"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:textColor="#000000"
            android:textCursorDrawable="@null"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/password_input"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:background="@drawable/round_edit_text_login_style"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:textColor="#000000"
            android:textCursorDrawable="@null"
            android:textSize="14sp" />
    </LinearLayout>

    <Button
        android:id="@+id/login_button"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_below="@+id/linear_layout_login_form"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="@drawable/blue_round_flat_button"
        android:text="@string/login"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        android:textStyle="bold" />
</RelativeLayout>