<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayoutLogin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pinkEloviz"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/logoEloviz"
        android:layout_width="200dp"
        android:layout_height="match_parent"
        android:layout_above="@+id/linearLayoutLoginPassword"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:src="@drawable/main_logo_white" />

    <LinearLayout
        android:id="@+id/linearLayoutLoginPassword"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_centerVertical="true"
        android:orientation="vertical"
        android:typeface="serif">

        <EditText
            android:id="@+id/loginInput"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:background="@drawable/round_edit_text_login_style"
            android:ems="10"
            android:hint="@string/login"
            android:inputType="textNoSuggestions"
            android:paddingLeft="10dp"
            android:textColor="#000000"
            android:textCursorDrawable="@null"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/emailInput"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:background="@drawable/round_edit_text_login_style"
            android:ems="10"
            android:hint="Email"
            android:inputType="textEmailAddress"
            android:paddingLeft="10dp"
            android:textColor="#000000"
            android:textCursorDrawable="@null"
            android:textSize="14sp" />
        <EditText
            android:id="@+id/passwordInput"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:background="@drawable/round_edit_text_login_style"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingLeft="10dp"
            android:textColor="#000000"
            android:textCursorDrawable="@null"
            android:textSize="14sp" />
    </LinearLayout>

    <Button
        android:id="@+id/registerButton"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_below="@+id/linearLayoutLoginPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="@drawable/blue_flat_button"
        android:text="@string/register"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/backButton"
        android:layout_width="60dp"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="BACK"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/skipButton"
        android:layout_width="60dp"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:background="@drawable/green_flat_button"
        android:text="@string/skip"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        android:textStyle="bold" />
</RelativeLayout>
